--- a/src/styles/navigation.css
+++ b/src/styles/navigation.css
@@ -1,4 +1,3 @@
-
 .animation__navigation{
     position: absolute;
     width: 9.375vw;
@@ -44,7 +43,11 @@
 }
 
 .navigation__paragraph.active{
-    background: linear-gradient(90deg,rgba(126, 143, 143, 0),rgba(126, 143, 143, 0.15),rgba(126, 143, 143, 0));
+    background: linear-gradient(90deg,rgba(223, 0, 91, 0),rgba(223, 0, 91, 0.15),rgba(223, 0, 91, 0));
+}
+
+.navigation__paragraph.active svg{
+    fill: #DF005B;
 }
 
 .navigation__paragraph svg{
